# Rust-Microservices

./: README.md
actix-example/: Cargo.toml  benchmark.yml
actix-example/src/: connection.rs  model.rs
actix-web/: .env
actix-web/migrations/2021-08-23-125055_create_posts/: up.sql
actix-web/src/: handlers.rs  main.rs  repository.rs  schema.rs
actors-model/: Cargo.toml
actors-model/migrations/2021-08-25-125532_create_posts/: up.sql
actors-model/src/: main.rs  schema.rs
actors-model/src/actors/: count.rs  db.rs  mod.rs
actors-model/src/db/: mod.rs
actors-model/src/handlers/: handlers.rs
actors-model/src/model/: model.rs
benchmarks-fibonacci/: Cargo.toml
benchmarks-fibonacci/src/: lib.rs
case-study/: docker-compose.yml
case-study/actix-example/: .env  Cargo.toml  Dockerfile
case-study/actix-example/src/: connection.rs  handlers.rs  log_config.rs  main.rs  model.rs  repository.rs  schema.rs  utils.rs
case-study/api-gateway/: .env  Cargo.toml  Dockerfile
case-study/api-gateway/src/: constants.rs  main.rs
case-study/api-gateway/src/config/: app.rs
case-study/api-gateway/src/endpoints/: comments.rs  mod.rs  posts.rs  rates.rs  users.rs
case-study/api-gateway/src/errors/: auth_error.rs
case-study/api-gateway/src/models/: comment.rs  mod.rs  post.rs  rate.rs  user.rs
case-study/api-gateway/src/utils/: client_response.rs  mod.rs  token_util.rs
case-study/frontend/: package-lock.json  package.json
case-study/frontend/public/: index.html
case-study/frontend/src/: main.js
case-study/frontend/src/components/: AddAdmin.vue  AddPost.vue  Comments.vue  Confirm.vue  MyPosts.vue  Navbar.vue  NotAllowedDialog.vue  Posts.vue  SignIn.vue  SignUp.vue
case-study/frontend/src/router/: index.js
case-study/frontend/src/store/: index.js
case-study/log-service/: .env  Cargo.toml
case-study/log-service/src/: log.rs  main.rs
case-study/rating-microservice/: .env  Cargo.toml  Dockerfile
case-study/rating-microservice/migrations/2021-09-05-141107_create_posts_and_comments/: down.sql  up.sql
case-study/rating-microservice/src/: constants.rs  main.rs  schema.rs
case-study/rating-microservice/src/config/: app.rs  log.rs
case-study/rating-microservice/src/endpoints/: comments_controller.rs  mod.rs  rates_controller.rs
case-study/rating-microservice/src/model/: comment.rs  mod.rs  post.rs  rate.rs
case-study/rating-microservice/src/repository/: comments_repository.rs  mod.rs  rates_repository.rs
case-study/rating-microservice/src/services/: comments_service.rs  mod.rs  rates_service.rs
case-study/rating-microservice/src/utils/: mod.rs  response_util.rs  token_util.rs
case-study/search-microservice/: .env  Cargo.toml  Dockerfile
case-study/search-microservice/migrations/2021-09-05-094242_create_posts/: up.sql
case-study/search-microservice/src/: main.rs
case-study/search-microservice/src/config/: db.rs  log.rs
case-study/search-microservice/src/endpoints/: mod.rs  posts_controller.rs
case-study/search-microservice/src/model/: post.rs
case-study/search-microservice/src/repository/: posts_repository.rs
case-study/search-microservice/src/services/: mod.rs  posts_service.rs
case-study/search-microservice/src/utils/: mod.rs
case-study/user-microservice/: .env  Cargo.toml  Dockerfile
case-study/user-microservice/migrations/2021-09-02-211113_create_users/: up.sql
case-study/user-microservice/src/: main.rs  schema.rs
case-study/user-microservice/src/config/: app.rs  db.rs  log.rs
case-study/user-microservice/src/endpoints/: mod.rs  users_controller.rs
case-study/user-microservice/src/errors/: error.rs
case-study/user-microservice/src/models/: mod.rs  role.rs  token.rs  user.rs
case-study/user-microservice/src/repository/: user_repository.rs
case-study/user-microservice/src/services/: email_service.rs  mod.rs  users_service.rs
case-study/user-microservice/src/utils/: utils.rs
grpc/grpc/: Cargo.toml  build.rs
grpc/grpc-client/: Cargo.toml
grpc/grpc-client/src/: main.rs
grpc/grpc-server/: .env  Cargo.toml
grpc/grpc-server/migrations/2021-09-09-160729_create_post/: up.sql
grpc/grpc-server/src/: db.rs  main.rs  model.rs  repository.rs  schema.rs
grpc/grpc/proto/posts/: posts-info.proto
grpc/grpc/src/: lib.rs
hyper-example/: Cargo.toml
hyper-example/src/: handlers.rs  main.rs  router.rs
logging/: Cargo.toml
logging/src/: main.rs
mpsc/: Cargo.toml
mpsc/src/: main.rs
postgres-db/src/: main.rs
postgres-diesel/: Cargo.toml
postgres-diesel/migrations/2021-08-21-230517_create_posts/: up.sql
postgres-diesel/src/: main.rs  model.rs  repository.rs  schema.rs
postgres-driver/: Cargo.toml
posts-graphql/: .env  Cargo.toml
posts-graphql/migrations/2021-08-18-160320_create_posts/: down.sql  up.sql
posts-graphql/migrations/2021-08-19-122535_insert_data/: down.sql  up.sql
posts-graphql/src/: graphql_schema.rs  handlers.rs  kafka.rs  main.rs  schema.rs
posts-graphql/src/repositories/: author_repo.rs  input.rs  mod.rs  post_repo.rs
rocket/: .env  Cargo.toml
rocket/migrations/2021-08-23-111827_create_posts/: up.sql
rocket/src/: handlers.rs  main.rs  model.rs  repository.rs  schema.rs
