[package]
name = "actors-model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
diesel = { version = "1.4.7", features = ["r2d2", "postgres"] }
diesel_codegen = "0.16.1"
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.129"
serde_derive = "1.0.129"
serde_json = "1.0.66"
