[package]
name = "hyper-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
futures = "0.3.17"
hyper = "0.13"
route-recognizer = "0.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
bytes = "0.5"
