[package]
name = "postgres-diesel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
diesel =  { version = "1.4.7", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
failure = "0.1.8"
r2d2 = "0.8.9"
serde = "1.0.128"
serde_derive = "1.0.128"
