[package]
name = "posts-graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "3.3.2"
async-trait = "0.1.51"
dataloader = "0.14.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.16"
juniper = "0.15.7"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
lazy_static = "1.4.0"
juniper_subscriptions = "0.16.0"
async-stream = "0.3.2"
futures-core = "0.3.17"
futures-util = "0.3.17"
