[package]
name = "rocket-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
r2d2 = "0.8.9"
rocket = "0.4.10"
rocket_codegen = "0.4.10"
serde = "1.0.128"
serde_derive = "1.0.128"
serde_json = "1.0.66"
diesel = { version = "1.4.7", features = ["postgres"] }
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
