[package]
name = "api-gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-grants = "2.1.0"
actix-web-httpauth = "0.5.1"
awc = "2.0.3"
derive_more = "0.99.16"
dotenv = "0.15.0"
futures-core = "0.3.17"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
