[package]
name = "log-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0.130"
serde_derive = "1.0.130"

mongodb = "0.3"
bson = "0.12.3"
r2d2 = "0.8"
r2d2-mongodb = "0.1"
rev_lines = "0.2.1"
url = "1.7"
failure = "0.1.8"
job_scheduler = "1.2.1"
dotenv = "0.15.0"
