[package]
name = "search-microservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel_codegen = "0.16.1"
serde = "1.0.128"
serde_derive = "1.0.128"
serde_json = "1.0.66"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
log4rs = "1.0.0"
