[package]
name = "grpc-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = { path = "../grpc" }
dotenv = "0.15.0"
prost = "0.8.0"
prost-types = "0.8.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
tonic = "0.5.2"
tokio = { version = "1.10.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.7"
futures = "0.3.16"
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
